--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -14,7 +14,7 @@ jobs:
 
         - name: Build the docs
           shell: cmd
-          working-directory: docs-source/
+          working-directory: ./
           run: '"./docfx/2.52/docfx.exe" docfx.json'
 
         - name: Deploy
