--- a/manifest.json
+++ b/manifest.json
@@ -29,11 +29,23 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/blocks.md",
+      "source_relative_path": "articles/blocks/blocks.md",
       "output": {
         ".html": {
-          "relative_path": "articles/blocks.html",
-          "hash": "s1VPnnY17x0LX9GOmgpKCg=="
+          "relative_path": "articles/blocks/blocks.html",
+          "hash": "MVXhnJDE/WHmANuPf8oFpg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/blocks/tileEntities.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/blocks/tileEntities.html",
+          "hash": "l22G6ygbEDq9JTc5my9Vng=="
         }
       },
       "is_incremental": false,
@@ -57,7 +69,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/toc.html",
-          "hash": "jMlhBJQE7e32yCWSgUx+HA=="
+          "hash": "FUawLGWG7uG+AU5ERRzveg=="
         }
       },
       "is_incremental": false,
@@ -102,7 +114,7 @@
         "ConceptualDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 5,
+          "total_file_count": 6,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
