--- a/manifest.json
+++ b/manifest.json
@@ -148,12 +148,36 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "notes/forge.md",
+      "output": {
+        ".html": {
+          "relative_path": "notes/forge.html",
+          "hash": "527pegGAR5tKH089K7BKqw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Toc",
+      "source_relative_path": "notes/toc.yml",
+      "output": {
+        ".html": {
+          "relative_path": "notes/toc.html",
+          "hash": "v+1+ON1+93UuwL4xZ82hXA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Toc",
       "source_relative_path": "toc.yml",
       "output": {
         ".html": {
           "relative_path": "toc.html",
-          "hash": "pKV8tlE0iQhgO9RLvAvDPw=="
+          "hash": "fcsNKEKa4s/1VhVx0h6Bpg=="
         }
       },
       "is_incremental": false,
@@ -174,7 +198,7 @@
         "ConceptualDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 11,
+          "total_file_count": 12,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
