--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "d:/a/ACFT/ACFT",
+  "source_base_path": "D:/a/ACFT/ACFT",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -160,6 +160,18 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "notes/forge_117.md",
+      "output": {
+        ".html": {
+          "relative_path": "notes/forge_117.html",
+          "hash": "+RZK4b0yfyGE1QvE5jYTEA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Toc",
       "source_relative_path": "notes/toc.yml",
       "output": {
@@ -198,7 +210,7 @@
         "ConceptualDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 12,
+          "total_file_count": 13,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
